envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain: 
              filename: "/etc/envoycerts/cer"
            private_key: 
              filename: "/etc/envoycerts/key"
      filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          http_protocol_options:
            allow_absolute_url: true
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          route_config:
            virtual_hosts:
            - name: storage
              domains:
              - "storage.*"
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: damaggiotemp.blob.core.windows.net
                  cluster: storageaccount_cluster
            - name: keyvault
              domains:
              - "keyvault.*"
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: damaggiotemp.vault.azure.net
                  cluster: keyvault_cluster
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: keyvault_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: keyvault_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: damaggiotemp.vault.azure.net
                port_value: 443
    tls_context:
      sni: damaggiotemp.vault.azure.net
  - name: storageaccount_cluster
    connect_timeout: 3s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: storageaccount_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: damaggiotemp.blob.core.windows.net
                port_value: 443
    tls_context:
      sni: damaggiotemp.blob.core.windows.net

admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
